--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
-    "dipiper": "^1.0.13"
+    "dipiper": "^1.0.13",
+    "mongodb": "^4.7.0",
+    "puppeteer-chromium-resolver": "^14.0.0",
+    "simple-node-logger": "^21.8.12"
   },
   "scripts": {
-    "start": "node run.js"
+    "dev": "node run.js"
   }
 }
