--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dipiper": "^1.0.13",
+    "express": "^4.18.1",
     "mongodb": "^4.7.0",
     "puppeteer-chromium-resolver": "^14.0.0",
     "simple-node-logger": "^21.8.12"
