--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "simple-node-logger": "^21.8.12"
   },
   "scripts": {
-    "dev": "node run.js"
+    "dev": "node run.js",
+    "test": "node test.js"
   }
 }
