--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "dipiper": "^1.0.13",
     "express": "^4.18.1",
+    "json-rpc-2.0": "^1.3.0",
     "mongodb": "^4.7.0",
+    "node-fetch": "^2.6.7",
     "puppeteer-chromium-resolver": "^14.0.0",
     "simple-node-logger": "^21.8.12"
   },
