--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "dipiper": "^1.0.13",
+    "dipiper": "./dipiper",
     "express": "^4.18.1",
     "json-rpc-2.0": "^1.3.0",
     "mongodb": "^4.7.0",
