--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dipiper": "./dipiper",
     "express": "^4.18.1",
     "json-rpc-2.0": "^1.3.0",
-    "mongodb": "^4.7.0",
+    "mongodb": "latest",
     "node-fetch": "^2.6.7",
     "puppeteer-chromium-resolver": "^14.0.0",
     "simple-node-logger": "^21.8.12"
